stack/keycloak/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: platform-sso
spec:
  host: REPLACED-BY-KUSTOMIZE
  to:
    kind: Service
    name: platform-sso-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
